# skia-voodoo

./: Cargo.toml
src/: main.rs  skia.rs
src/shaders/: Makefile  frag.spv  shader.frag
